--- a/.github/workflows/eks.yaml
+++ b/.github/workflows/eks.yaml
@@ -1,9 +1,10 @@
 name: CD Deploy to EKS
 
 on:
-  push:
-    branches:
-      - main
+  workflow_run:
+    workflows: ["ecr"]
+    types:
+      - completed
 
 jobs:
   deploy:
