--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -1,8 +1,8 @@
-name: Build and push image to ECR
+name: Build and push image to ECR and deploy to EKS
 
 on: push
   
-
+  
 jobs:
   
   build:
@@ -35,3 +35,11 @@ jobs:
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+    - name: Update kube config
+      run: aws eks update-kubeconfig --name Kubernetes-demo --region us-east-1
+
+    - name: Deploy to EKS
+        run: |
+          kubectl apply -f manifests/hello-app-deployment.yaml
+          kubectl apply -f manifests/hello-app-service.yaml
