--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -37,7 +37,7 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
     - name: Update kube config
-      run: aws eks update-kubeconfig --name Kubernetes-demo --region us-east-1
+      run: aws eks update-kubeconfig --name Kubernetes-test --region us-east-1
 
     - name: Deploy to EKS
       run: |
