--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -44,9 +44,9 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
     - name: Update kube config
-      run: aws eks update-kubeconfig --name Kubernetes-test --region us-east-1
+      run: aws eks update-kubeconfig --name test-app1 --region us-east-1
 
     - name: Deploy to EKS
       run: |
-        kubectl apply -f manifests/hello-app-deployment.yaml
-        kubectl apply -f manifests/hello-app-service.yaml
+        kubectl apply -f manifests/deployment.yaml
+        kubectl apply -f manifests/service.yaml
