--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -9,7 +9,7 @@ spec:
     app: hello-app 
 
   ports:
-    - port: 8080
+    - protocol: TCP
+      port: 8080
       targetPort: 8080
-
   type: LoadBalancer
