--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -16,6 +16,8 @@ jobs:
     - name: Check out code
       uses: actions/checkout@v2
 
+    - name: Install kubectl
+      uses: azure/setup-kubectl@v2.0
 
     
     - name: Configure AWS credentials
@@ -39,7 +41,7 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
     - name: Update kube config
-      run: aws eks update-kubeconfig --name test-app2 --region us-east-1
+      run: aws eks update-kubeconfig --name newClusterName --region us-east-1
 
     - name: Deploy to EKS
       run: |
