--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: hello-app
-        image: 927770512418.dkr.ecr.us-east-1.amazonaws.com/test-app1:sample_image
+        image: test-app1:sample_image
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
