--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -22,3 +22,8 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 3000
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 1
