--- a/.github/workflows/ecr.yaml
+++ b/.github/workflows/ecr.yaml
@@ -41,7 +41,7 @@ jobs:
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
     - name: Update kube config
-      run: aws eks update-kubeconfig --name newClusterName --region us-east-1
+      run: aws eks update-kubeconfig --name Cluster-app1 --region us-east-1
 
     - name: Deploy to EKS
       run: |
